# ras2cng

./: .gitignore  .readthedocs.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  sitemap.xml
.claude/rules/: clb-engineering-recommendation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
about/acknowledgments/: index.html
about/clb-engineering/: index.html
about/cloud-native-gis/: index.html
api/: index.html
api/cli/: index.html
api/duckdb_session/: index.html
api/geometry/: index.html
api/maplibre/: index.html
api/mapping/: index.html
api/pmtiles/: index.html
api/postgis_sync/: index.html
api/precipitation/: index.html
api/raster_recipes/: index.html
api/results/: index.html
api/scaffold/: index.html
api/terrain/: index.html
api/webgis_service/: index.html
deploy/webgis/: nginx-ras-raster.conf  ras2cng-raster.service
docs/: index.md
docs/about/: acknowledgments.md  clb-engineering.md  cloud-native-gis.md
docs/api/: cli.md  duckdb_session.md  geometry.md  index.md  maplibre.md  mapping.md  pmtiles.md  postgis_sync.md  precipitation.md  raster_recipes.md  results.md  scaffold.md  terrain.md  webgis_service.md
docs/examples/: 00_using_ras_examples.md  01_export_geometry.md  02_export_results.md  03_duckdb_queries.md  04_generate_pmtiles.md  05_cloud_native_stack.md  06_project_archive.md  07_result_maps.md  index.md
docs/getting-started/: cloud-native-stack.md  installation.md  quickstart.md
docs/reference/: data-structure.md
docs/stylesheets/: clb-branding.css
docs/user-guide/: duckdb-queries.md  geometry-export.md  geometry-layers.md  linux-wine-setup.md  maplibre.md  numeric-raster-service.md  overview.md  pmtiles.md  postgis-sync.md  precipitation-export.md  project-archive.md  raster-recipes.md  results-export.md
examples/: 00_using_ras_examples.py  01_export_geometry.py  02_export_results.py  03_duckdb_queries.py  03_duckdb_query.py  04_generate_pmtiles.py  05_cloud_native_stack.py  06_project_archive.py  07_result_maps.py  index.html
examples/00_using_ras_examples/: index.html
examples/01_export_geometry/: index.html
examples/02_export_results/: index.html
examples/03_duckdb_queries/: index.html
examples/04_generate_pmtiles/: index.html
examples/05_cloud_native_stack/: index.html
examples/06_project_archive/: index.html
examples/07_result_maps/: index.html
feature_dev_notes/: adr_maps_implementation_plan.md  historyreview_2026_04-12.md  map_hdf_implementation_plan.md  minimal_inputs_map_pipeline_2026-07-07.md
getting-started/cloud-native-stack/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
overrides/: main.html
ras2cng/: __init__.py  boundary.py  catalog.py  cli.py  geometry.py  maplibre.py  mapping.py  pmtiles.py  precipitation.py  project.py  publication.py  raster_recipes.py  release.py  results.py  scaffold.py  spatial_index.py  stored_maps.py  terrain.py  viewer_manifest.py  webgis_service.py
rascmdr_parquet/: __init__.py  cli.py  duckdb_session.py  geometry.py  postgis_sync.py
reference/data-structure/: index.html
search/: search_index.json
tests/: conftest.py  test_auxiliary_results.py  test_boundary.py  test_cli.py  test_duckdb_register.py  test_full_extraction.py  test_geometry_detection.py  test_geometry_new_layers.py  test_maplibre.py  test_mapping.py  test_package_imports.py  test_precipitation.py  test_project_archive.py  test_publication.py  test_raster_recipes.py  test_release.py  test_results_join.py  test_scaffold.py  test_spatial_index.py  test_steady_results.py  test_stored_maps.py  test_terrain.py  test_viewer_manifest.py  test_webgis_service.py
user-guide/duckdb-queries/: index.html
user-guide/geometry-export/: index.html
user-guide/geometry-layers/: index.html
user-guide/linux-wine-setup/: index.html
user-guide/maplibre/: index.html
user-guide/numeric-raster-service/: index.html
user-guide/overview/: index.html
(+6 files in other folders)
